2011-09-26  Sancho Lerena <slerena@artica.es>

	* index.php: Fixed load of extension startup hook function.

2011-09-26 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/alert_commands.php: Fixed updating a command.
	* ChangeLog: Fixed last commit date.

2011-09-26 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: Updated language files.

2011-09-26 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added the call "get_events" the filters for the
	free text in event description and status of event.

2011-09-26 Sancho Lerena <slerena@artica.es>

	* pandora_console/index.php: Developer mode disabled. 
	Ready for 4.0 release !

2011-09-26 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Fixed a problem with graphs which
	shows only a few points instead of all of them.

2011-09-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed height style attribute in step 3. 

2011-09-25 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added api call "set_validate_event".
	
	* include/api.php: fixed the login process for do more Pandora standar.

2011-09-23 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added the code for the return the more
	criticity event in the API call "get_events".

2011-09-23  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Update version and DB Build.

	* DEBIAN/control,
	DEBIAN/make_deb_package.sh
	include/config.php
	include/config_process.php
	pandora_console_install
	install.php
	pandora_console.spec
	pandora_console.redhat.spec: Updated version.

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Update version after
	migrate.

2011-09-23 Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php: fixed the query for to don't show
	the "not_init" modules.

2011-09-23 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: Updated language files.
