@@ -1,3 +1,9 @@
+2011-09-28  Sergio Martin <sergio.martin@artica.es>
+
+	* include/javascript/jquery.pandora.controls.js: Fixed module 
+	select refresh from jquery controls to fix the graph widget
+	on dashboard
+
 2011-09-26  Sancho Lerena <slerena@artica.es>
 
 	* index.php: Fixed load of extension startup hook function.
